Update mapper, token, synchronize code